--- a/.github/workflows/workspace.yml
+++ b/.github/workflows/workspace.yml
@@ -10,3 +10,7 @@ jobs:
   lint:
     name: Check linters
     runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
