--- a/.github/workflows/workspace.yml
+++ b/.github/workflows/workspace.yml
@@ -21,3 +21,9 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+
+      - name: Check formatting
+        uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --all --manifest-path ./2023/Cargo.toml -- --check
